Fixed error with overflow due to loader

--- a/src/app/css/main.css
+++ b/src/app/css/main.css
@@ -250,6 +250,10 @@ header#loadIntro {
   color: #1aa7ff;
 }
 
+.vanish {
+  display: none;
+}
+
 #widgetList {
 
 }
